--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -27,7 +27,7 @@ jobs:
         dotnet-version: 7
       
     - name: dotnet restore
-      run: dotnet restore --runtime $build_runtime
+      run: dotnet restore --runtime ${{ env.build_runtime }}
       
     - name: dotnet publish
       run: dotnet publish nzbhydra-schedule.sln --configuration ${{ env.build_configuration }} -p:PublishSingleFile=false --self-contained true -p:PublishTrimmed=false -p:PublishReadyToRun=true --runtime ${{ env.build_runtime }} --framework ${{ env.build_framework }} -p:Version=${{ env.version }} -p:PackageVersion=${{ env.version }} --output "${{ github.workspace }}/publish/${{ env.build_runtime }}"
