--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -12,7 +12,7 @@ env:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     env:
       build_configuration: Release
       build_runtime: linux-x64
@@ -30,7 +30,7 @@ jobs:
       run: dotnet restore --runtime ${{ env.build_runtime }}
       
     - name: dotnet publish
-      run: dotnet publish nzbhydra-schedule.sln --configuration ${{ env.build_configuration }} -p:PublishSingleFile=false --self-contained true -p:PublishTrimmed=false -p:PublishReadyToRun=true --runtime ${{ env.build_runtime }} --framework ${{ env.build_framework }} -p:Version=${{ env.version }} -p:PackageVersion=${{ env.version }} --output "${{ github.workspace }}/publish/${{ env.build_runtime }}"
+      run: dotnet publish nzbhydra-schedule/nzbhydra-schedule.csproj --configuration ${{ env.build_configuration }} -p:PublishSingleFile=false --self-contained true -p:PublishTrimmed=false -p:PublishReadyToRun=true --runtime ${{ env.build_runtime }} --framework ${{ env.build_framework }} -p:Version=${{ env.version }} -p:PackageVersion=${{ env.version }} --output "${{ github.workspace }}/publish/${{ env.build_runtime }}"
 
     - name: Upload artifact
       uses: actions/upload-artifact@v3
