--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -8,7 +8,7 @@ on:
   pull_request:
 
 env:
-  version: "1.0.0.${{ github.run_number }}${{ github.run_attempt }}"
+  version: "0.0.1.${{ github.run_number }}${{ github.run_attempt }}"
 
 jobs:
   build:
@@ -46,6 +46,7 @@ jobs:
     # if: ${{ github.event_name != 'pull_request'  && github.ref_name == 'main' }}
     runs-on: ubuntu-latest
     needs: build
+    environment: dockerhub
 
     steps:
     - name: Get artifacts
@@ -53,3 +54,10 @@ jobs:
       with:
         name: build
         path: ${{ github.workspace }}/docker/publish
+        
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+      
