--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -55,9 +55,19 @@ jobs:
         name: build
         path: ${{ github.workspace }}/docker/publish
         
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+        
     - name: Login to Docker Hub
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
       
+    - name: Build and push
+      uses: docker/build-push-action@v4
+      with:
+        context: ${{ github.workspace }}/docker
+        push: true
+        tags: mmuffins/nzbhydra-scheduler:latest, mmuffins/nzbhydra-scheduler:${{ env.version }}
+
