--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -55,8 +55,8 @@ jobs:
         name: build
         path: ${{ github.workspace }}/docker/publish
         
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+    # - name: Set up Docker Buildx
+    #   uses: docker/setup-buildx-action@v2
         
     - name: Login to Docker Hub
       uses: docker/login-action@v2
