--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -55,8 +55,11 @@ jobs:
         name: build
         path: ${{ github.workspace }}/docker/publish
         
-    # - name: Set up Docker Buildx
-    #   uses: docker/setup-buildx-action@v2
+    - name: Docker Setup QEMU
+      uses: docker/setup-qemu-action@v1
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
         
     - name: Login to Docker Hub
       uses: docker/login-action@v2
@@ -68,6 +71,18 @@ jobs:
       uses: docker/build-push-action@v4
       with:
         context: ${{ github.workspace }}/docker
+        file: ${{ github.workspace }}/docker/Dockerfile
         push: true
-        tags: mmuffins/nzbhydra-scheduler:latest, mmuffins/nzbhydra-scheduler:${{ env.version }}
+        platforms: linux/amd64
+        tags: |
+          mmuffins/nzbhydra-scheduler:latest
+          mmuffins/nzbhydra-scheduler:${{ env.version }}
+        labels: |
+          org.opencontainers.image.title=${{ github.event.repository.name }}
+          org.opencontainers.image.description=${{ github.event.repository.description }}
+          org.opencontainers.image.url=${{ github.event.repository.html_url }}
+          org.opencontainers.image.source=${{ github.event.repository.clone_url }}
+          org.opencontainers.image.revision=${{ github.sha }}
+          org.opencontainers.image.version=${{ env.version }}
+          org.opencontainers.image.licenses='MIT'
 
