--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -71,7 +71,7 @@ jobs:
       uses: docker/build-push-action@v4
       with:
         context: ${{ github.workspace }}
-        file: ${{ github.workspace }}/docker/Dockerfile
+        file: docker/Dockerfile
         push: true
         platforms: linux/amd64
         tags: |
