--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -55,6 +55,15 @@ jobs:
         name: build
         path: ${{ github.workspace }}/docker/publish
         
+    - name: ls1
+      run: ls -al "${{ github.workspace }}/docker/"
+      
+    - name: ls2
+      run: ls -al "${{ github.workspace }}/docker/publish"
+      
+    - name: ls3
+      run: ls -al "{{defaultContext}}:docker"
+        
     - name: Docker Setup QEMU
       uses: docker/setup-qemu-action@v1
 
