--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,6 +7,7 @@ RUN apt update && apt install -y dos2unix cron && rm -rf /var/lib/apt/lists/*
 WORKDIR /usr/scheduler
 COPY start.sh .
 COPY start-getsearchterms.sh .
+RUN mkdir ./publish
 COPY publish/* ./publish/
 
 # Fix line endings && execute permissions
