--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -49,6 +49,7 @@ jobs:
     environment: dockerhub
 
     steps:
+    - uses: actions/checkout@v3
     - name: Get artifacts
       uses: actions/download-artifact@v3
       with:
