--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -47,6 +47,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment: dockerhub
+    permissions:
+      packages: write
+      contents: read
 
     steps:
     - uses: actions/checkout@v3
