--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -19,7 +19,7 @@ jobs:
       build_framework: net7.0
     
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v3
     
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v3
@@ -43,13 +43,46 @@ jobs:
         
 
   release:
-    # if: ${{ github.event_name != 'pull_request'  && github.ref_name == 'main' }}
+    if: ${{ github.event_name != 'pull_request'  && github.ref_name == 'main' }}
     runs-on: ubuntu-latest
     needs: build
+    environment: dockerhub
 
     steps:
+    - uses: actions/checkout@v3
     - name: Get artifacts
       uses: actions/download-artifact@v3
       with:
         name: build
         path: ${{ github.workspace }}/docker/publish
+
+    - name: Docker Setup QEMU
+      uses: docker/setup-qemu-action@v1
+
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+        
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+      
+    - name: Build and push
+      uses: docker/build-push-action@v4
+      with:
+        context: "${{ github.workspace }}/docker"
+        push: true
+        platforms: linux/amd64
+        tags: |
+          mmuffins/nzbhydra-scheduler:latest
+          mmuffins/nzbhydra-scheduler:${{ env.version }}
+        labels: |
+          org.opencontainers.image.title=${{ github.event.repository.name }}
+          org.opencontainers.image.description=${{ github.event.repository.description }}
+          org.opencontainers.image.url=${{ github.event.repository.html_url }}
+          org.opencontainers.image.source=${{ github.event.repository.clone_url }}
+          org.opencontainers.image.revision=${{ github.sha }}
+          org.opencontainers.image.version=${{ env.version }}
+          org.opencontainers.image.licenses='MIT'
+
