--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -43,13 +43,13 @@ jobs:
         
 
   release:
-    # if: ${{ github.event_name != 'pull_request'  && github.ref_name == 'main' }}
+    if: ${{ github.event_name != 'pull_request'  && github.ref_name == 'main' }}
     runs-on: ubuntu-latest
     needs: build
     environment: dockerhub
     env: 
       DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TEST }}
+      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
       
     steps:
     - uses: actions/checkout@v4
@@ -72,3 +72,20 @@ jobs:
         password: ${{ env.DOCKERHUB_TOKEN }}
         logout: true
 
+    - name: Build and push
+      uses: docker/build-push-action@v5
+      with:
+        context: "${{ github.workspace }}/docker"
+        push: true
+        platforms: linux/amd64
+        tags: |
+          mmuffins/nzbhydra-scheduler:latest
+          mmuffins/nzbhydra-scheduler:${{ env.version }}
+        labels: |
+          org.opencontainers.image.title=${{ github.event.repository.name }}
+          org.opencontainers.image.description=${{ github.event.repository.description }}
+          org.opencontainers.image.url=${{ github.event.repository.html_url }}
+          org.opencontainers.image.source=${{ github.event.repository.clone_url }}
+          org.opencontainers.image.revision=${{ github.sha }}
+          org.opencontainers.image.version=${{ env.version }}
+          org.opencontainers.image.licenses='MIT'
