--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -47,7 +47,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     environment: dockerhub
-
+    env: 
+      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
+      DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
+      
     steps:
     - uses: actions/checkout@v4
     - name: Get artifacts
@@ -65,9 +68,10 @@ jobs:
     - name: Login to Docker Hub
       uses: docker/login-action@v3
       with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
-      
+        username: ${{ env.DOCKERHUB_USERNAME }}
+        password: ${{ env.DOCKERHUB_TOKEN }}
+        logout: true
+
     - name: Build and push
       uses: docker/build-push-action@v5
       with:
@@ -85,4 +89,3 @@ jobs:
           org.opencontainers.image.revision=${{ github.sha }}
           org.opencontainers.image.version=${{ env.version }}
           org.opencontainers.image.licenses='MIT'
-
